--- a/style.css
+++ b/style.css
@@ -360,6 +360,9 @@ body.chaos-mode {
 
 #hotdog:hover {
   background-image: url(assets/images/hotdog.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .small-text {
@@ -391,66 +394,11 @@ footer {
   margin-bottom: 20px;
 }
 
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 680px) {
   body {
-    padding-top: 80px;
-  }
-
-  h1 {
-    font-size: 32px;
-  }
-
-  .header {
-    flex-direction: column;
-    padding: 10px 5%;
-  }
-
-  .navbar {
-    margin-top: 10px;
-  }
-
-  .navbar a {
-    margin-left: 20px;
-    font-size: 16px;
-  }
-
-  .general-content {
-    width: 95%;
-    padding: 15px;
-    margin: 20px 10px;
-  }
-
-  .story-content {
-    flex-direction: column;
-  }
-
-  #fuji-img,
-  #lectern-img {
-    height: auto;
-    width: 80%;
-    max-width: 200px;
-  }
-
-  #hotdog {
-    width: 100%;
-    height: 150px;
-  }
-
-  #links-content {
-    width: 90%;
-    gap: 10px;
-  }
-
-  .logos {
-    height: 30px;
-    width: 30px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  body {
-    padding-top: 60px;
+    padding-top: 100px;
+    font-size: 15px;
+    margin: 10px;
   }
 
   h1 {
@@ -463,7 +411,7 @@ footer {
   }
 
   .general-content {
-    padding: 10px;
+    padding: 20px;
   }
 
   #give-up-button {
