--- a/style.css
+++ b/style.css
@@ -394,9 +394,65 @@ footer {
   margin-bottom: 20px;
 }
 
+@media screen and (max-width: 768px) {
+  body {
+    padding-top: 120px;
+  }
+
+  h1 {
+    font-size: 32px;
+  }
+
+  .header {
+    flex-direction: column;
+    padding: 10px 5%;
+  }
+
+  .navbar {
+    margin-top: 10px;
+  }
+
+  .navbar a {
+    margin-left: 20px;
+    font-size: 16px;
+  }
+
+  .general-content {
+    width: 95%;
+    padding: 15px;
+    margin: 20px 10px;
+  }
+
+  .story-content {
+    flex-direction: column;
+  }
+
+  #fuji-img,
+  #lectern-img {
+    height: auto;
+    width: 80%;
+    max-width: 200px;
+  }
+
+  #hotdog {
+    width: 100%;
+    height: 150px;
+  }
+
+  #links-content {
+    width: 90%;
+    gap: 10px;
+  }
+
+  .logos {
+    height: 30px;
+    width: 30px;
+  }
+}
+
 @media screen and (max-width: 680px) {
   body {
-    padding-top: 100px;
+    padding-top: 120px;
     font-size: 15px;
     margin: 10px;
   }
@@ -411,7 +467,7 @@ footer {
   }
 
   .general-content {
-    padding: 20px;
+    padding: 10px;
   }
 
   #give-up-button {
