--- a/style.css
+++ b/style.css
@@ -86,6 +86,21 @@ audio {
   width: 100%;
 }
 
+.navbar {
+  display: flex;
+  align-items: center;
+}
+
+/* for smaller screens */
+.nav-toggle {
+  display: none;
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 24px;
+  cursor: pointer;
+}
+
 /* navbar end */
 
 /* chaos */
@@ -394,33 +409,72 @@ footer {
   margin-bottom: 20px;
 }
 
+/* for smaller screens */
 @media screen and (max-width: 768px) {
+  .navbar a {
+    margin-left: 20px;
+    font-size: 13px;
+  }
+
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .nav-toggle {
+    display: block;
+    align-self: flex-end;
+    margin-top: 10px;
+  }
+
+  .nav-links {
+    display: none;
+    width: 100%;
+  }
+
+  .nav-links.active {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .navbar a {
+    margin: 10px 0;
+  }
+
+  header {
+    align-items: center;
+  }
+
+  .chaos-button {
+    width: 25%;
+    font-size: 12px;
+  }
+
+  .page-container {
+    margin: 10%;
+  }
+
   body {
-    padding-top: 120px;
+    padding-top: 45px;
   }
 
   h1 {
     font-size: 32px;
   }
 
-  .header {
-    flex-direction: column;
-    padding: 10px 5%;
+  h2 {
+    font-size: 25px;
   }
 
-  .navbar {
-    margin-top: 10px;
-  }
-
-  .navbar a {
-    margin-left: 20px;
-    font-size: 16px;
+  .small-text {
+    font-size: 12px;
   }
 
   .general-content {
     width: 95%;
     padding: 15px;
     margin: 20px 10px;
+    font-size: 15px;
   }
 
   .story-content {
@@ -430,7 +484,7 @@ footer {
   #fuji-img,
   #lectern-img {
     height: auto;
-    width: 80%;
+    width: 60%;
     max-width: 200px;
   }
 
@@ -448,33 +502,10 @@ footer {
     height: 30px;
     width: 30px;
   }
-}
 
-@media screen and (max-width: 680px) {
-  body {
-    padding-top: 120px;
-    font-size: 15px;
-    margin: 10px;
-  }
-
-  h1 {
-    font-size: 28px;
-  }
-
-  .navbar a {
-    margin-left: 15px;
-    font-size: 14px;
-  }
-
-  .general-content {
-    padding: 10px;
-  }
-
-  #give-up-button {
+  footer {
+    font-size: 10px;
     width: 80%;
-  }
-
-  #links-content {
-    flex-wrap: wrap;
+    margin-top: -30px;
   }
 }
